# vienna-claims-agent

./: .env  .env.example  .gitignore  claims.db  pyproject.toml  run.py
claim_emails/: claim_5.txt
claims_agent/: agent.py  cli.py  config.py  email_ingestion.py  importer.py  llm_agent.py  models.py  notifications.py  orchestrator.py  scheduler.py  seed_data.py  tools.py  tracking_agent.py
claims_agent/carriers/: __init__.py  austrian_post.py  base.py  dhl.py  dpd.py  fedex.py  gls.py  registry.py  ups.py
claims_agent/web/: __init__.py  app.py
claims_agent/web/static/: index.html
test_data/: shipments.csv
test_emails/: dhl_delivery.eml  dhl_shipment.eml  ups_delivery.eml  ups_shipment.eml
vienna_claims_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
